# nonebot-plugin-uma

./: README.md  pyproject.toml
nonebot_plugin_uma/: __init__.py  __main__.py  config.py  resource.py  utils.py
nonebot_plugin_uma/uma_skills/: __init__.py  data_source.py  generate.py  update.py
